k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: devopshub
  labels:
    app.kubernetes.io/name: devopshub
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app: devopshub-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: http
