k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopshub-client
  namespace: devopshub
  labels:
    app.kubernetes.io/name: devopshub
    app.kubernetes.io/component: frontend
spec:
  type: LoadBalancer
  selector:
    app: devopshub-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
