k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devopshub-ingress
  namespace: devopshub
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  rules:
    - host: devopshub.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devopshub-client
                port:
                  number: 80
